- Remove reference of GitHub from source. - Downgraded c# to 8.0

--- a/Sharpnado.CollectionView.Droid/Sharpnado.CollectionView.Droid.csproj
+++ b/Sharpnado.CollectionView.Droid/Sharpnado.CollectionView.Droid.csproj
@@ -26,14 +26,16 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>portable</DebugType>
+    <DebugType></DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -83,14 +85,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sharpnado.CollectionView\Sharpnado.CollectionView.csproj">
-      <Project>{76625DCB-B2F9-4E7E-AE80-B657AE9D2566}</Project>
+      <Project>{CE322B68-0EBB-41B0-AC98-F15B6687D03E}</Project>
       <Name>Sharpnado.CollectionView</Name>
     </ProjectReference>
   </ItemGroup>
