--- a/Sharpnado.CollectionView.iOS/Sharpnado.CollectionView.iOS.csproj
+++ b/Sharpnado.CollectionView.iOS/Sharpnado.CollectionView.iOS.csproj
@@ -26,7 +26,7 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
@@ -70,17 +70,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>5.0.0.2196</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sharpnado.CollectionView\Sharpnado.CollectionView.csproj">
-      <Project>{76625DCB-B2F9-4E7E-AE80-B657AE9D2566}</Project>
+      <Project>{365B54B8-0895-48AD-AE59-73B4812CB2EA}</Project>
       <Name>Sharpnado.CollectionView</Name>
     </ProjectReference>
   </ItemGroup>
